<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ItemCreationActivity"
        android:orientation="vertical">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@drawable/save_icon"
            android:id="@+id/floatingActionButton3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.973"
            app:layout_constraintVertical_bias="0.987"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:onClick="save"
            android:contentDescription="@string/saveitem"
            app:backgroundTint="#8BC34A" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:srcCompat="@android:drawable/ic_menu_my_calendar"
            android:id="@+id/floatingActionButton2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.973"
            app:layout_constraintVertical_bias="0.975"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/reminder"
            app:layout_constraintBottom_toTopOf="@+id/floatingActionButton3"
            android:onClick="withReminder" />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="10dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/reminderLayout"
                    android:layout_marginBottom="5sp">

                <TextView
                        android:text=""
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:id="@+id/firstOccurrenceDate"
                        style="@style/Widget.AppCompat.EditText"
                        android:hint="@string/date"
                        android:textSize="20sp"
                        android:inputType="none"
                        android:maxLines="1"
                       android:focusableInTouchMode="false"
                        android:scrollbars="horizontal"
                        android:clickable="true"
                        android:onClick="chooseDate"
                        android:background="@android:color/transparent"
                        android:layout_marginEnd="3sp" />

                <EditText
                        android:text=""
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:id="@+id/repeatCount"
                        style="@style/Widget.AppCompat.EditText"
                        android:hint="@string/repeat"
                        android:inputType="number"
                        android:textSize="20sp"
                        android:background="@android:color/transparent"
                        android:gravity="end" />

                <Spinner
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/reminderType"
                        android:layout_weight="4"
                        android:popupBackground="#3A3B3D" />
            </LinearLayout>


            <EditText
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/titleArea"
                    android:textStyle="bold"
                    style="@style/Widget.AppCompat.EditText"
                    android:hint="@string/title"
                    android:textSize="44sp"
                    android:imeOptions="flagNoExtractUi"
                    android:background="@android:color/transparent" />

            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <Spinner
                        android:layout_width="90sp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:id="@+id/itemType"
                        android:popupBackground="#3A3B3D"
                        android:background="@null"/>

                <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="18sp"
                        android:layout_gravity="end"
                        android:id="@+id/priority"
                        android:popupBackground="#3A3B3D"
                        android:background="@null"/>
            </FrameLayout>


            <EditText
                    android:text=""
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textArea"
                    tools:layout_editor_absoluteY="67dp"
                    tools:layout_editor_absoluteX="129dp"
                    android:hint="@string/text"
                    android:textAlignment="viewStart"
                    android:lines="30"
                    android:gravity="top|start"
                    android:scrollbars="vertical"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="20dp"
                    android:imeOptions="flagNoExtractUi"
                    android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>